<resources>
    <string name="app_name">DeudoresApp</string>
    <string name="title_list">lista</string>
    <string name="title_create">crear</string>
    <string name="title_read">buscar</string>
    <string name="title_update">actualizar</string>
    <string name="title_delete">borrar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Digite el Nombre</string>
    <string name="phone_hint">Digite el teléfono</string>
    <string name="hint_amount">Digite el valor de la Deuda</string>
    <string name="crear">Crear</string>
    <string name="nombre">Juan Rios</string>
    <string name="name_hint">Digite el nombre:</string>
    <string name="phone_example">3229486754</string>
    <string name="amount_example">120000</string>
    <string name="phone_value">Teléfono: %s</string>
    <string name="amount_value">Valor de la deuda: $%s</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_details">Detalles</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="splash">Image_splash</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="mostrar">Mostrar contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="username">Nombre de usuario</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="errorpass">Contraseña incorrecta</string>
    <string name="no_coincidencia">Las contraseñas no coinciden</string>
    <string name="errorregister">Verifique todos los campos</string>
    <string name="digits8">El usuario debe contener al menos 8 caracteres</string>
    <string name="email_invalido">El correo ingresado no es válido</string>
    <string name="digits6">La contraseña debe contener al menos 6 carateres</string>
    <string name="errorlogin">Verifique el correo o regístrese</string>
</resources>