<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_create">

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.juanrios66.deudoresapp.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.juanrios66.deudoresapp.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.juanrios66.deudoresapp.ui.read.ReadFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read" />

    <fragment
        android:id="@+id/navigation_update"
        android:name="com.juanrios66.deudoresapp.ui.update.UpdateFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_update" />

    <fragment
        android:id="@+id/navigation_delete"
        android:name="com.juanrios66.deudoresapp.ui.delete.DeleteFragment"
        android:label="@string/title_delete"
        tools:layout="@layout/fragment_delete" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.juanrios66.deudoresapp.ui.detail.DetailFragment"
        android:label="@string/title_delete"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="debtor"
            app:argType="com.juanrios66.deudoresapp.data.entities.Debtor" />
    </fragment>

</navigation>